# flask-template

./: .gitignore  Dockerfile  README.md  behave.ini  default.conf  docker-compose.yml  dynaconf_validators.toml  gunicorn.conf.py  pyproject.toml  requirements.txt  settings.toml  wsgi.py
features/: admin.feature  environment.py  index.feature  parameter-create-ui.feature  parameter-list-ui.feature  parameter_create_ui.feature  parameter_delete_ui.feature  parameter_list_ui.feature  parameter_update_ui.feature
features/steps/: steps.py  swagger_ui.py
features/swagger/: parameter_update_ui.feature
flask_template/: __init__.py  app.py  commands.py  model.py  schema.py
flask_template/blueprints/restapi/: __init__.py  parameter_namespace.py
flask_template/business/: parameter_business.py
flask_template/extensions/: admin.py  database.py  serializer.py
flask_template/utils/: json_utils.py
migrations/: env.py
migrations/versions/: 04423425eafa_initial_migration.py  c3b50ef21e53_user_email_required.py  fde0a5117d99_add_table_parameters.py
tests/: conftest.py  test_flask_admin_create_user.py  test_flask_admin_remove_user.py  test_flask_admin_update_user.py  test_flask_app.py  test_flask_commands.py  test_flask_template.py  test_parameter_create.py
tests/admin/: test_admin_user_create.py  test_admin_user_remove.py  test_admin_user_update.py
tests/flask/: test_app.py
tests/parameter/: test_parameter_create.py  test_parameter_delete.py  test_parameter_list.py  test_parameter_update.py
tests/utils/: test_json_utils.py
